Source/WebKit2/WebProcess/WebCoreSupport/mac/WebSystemInterface.mm
@@ -161,6 +161,8 @@ void InitWebCoreSystemInterface(void)
 
         INIT(CreateVMPressureDispatchOnMainQueue);
 
+        INIT(DestroyRenderingResources);
+
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 1080
         INIT(ExecutableWasLinkedOnOrBeforeLion);
 #endif
